# candle-holder-serve-benchmarks

./: README.md  pyproject.toml  run_benchmarks.sh
locust_scripts/: high_load_for_cpu_measuring.py  mean_latency_and_p95.py  recover_after_high_load.py  scalability_and_robustness_under_high_load.py  text_generation.py  throughput_under_increasing_load.py
results_candle_holder_serve_cpu/: latency_p95_stats.csv  latency_p95_stats_history.csv  recover_after_high_load_stats.csv  recover_after_high_load_stats_history.csv  scalability_robustness_stats.csv  scalability_robustness_stats_history.csv  throughput_stats.csv  throughput_stats_history.csv
results_hugging_face_inference_toolkit_cpu/: latency_p95_stats.csv  latency_p95_stats_history.csv  recover_after_high_load_stats.csv  recover_after_high_load_stats_history.csv  scalability_robustness_stats.csv  scalability_robustness_stats_history.csv  throughput_stats.csv  throughput_stats_history.csv
