[project]
name = "candle-holder-serve-benchmarks"
version = "0.1.0"
description = "locust scripts for benchmarking `candle-holder-serve`"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.21.0",
    "hf-transfer>=0.1.8",
    "locust>=2.31.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
